2013-05-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient pointer access.
	* sim/ucsim/stm8.src/inst.cc:
	  Fix ldw pointer write (bug #2174).
	* support/regression/tests/gcc-torture-execute-pr47538.c:
	  Disable volatile test affected by bug #2171.

2013-05-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient zeroing by pointer, more efficient unsigned cast, preparations for more efficient pointer access.
	* src/SDCCopt.c:
	  Allow offset in pointer read.
	* sim/ucsim/stm8.src/inst.cc:
	  Fix handling of N and Z flag in ldw.
	* src/stm8/main.c:
	  More efficient initialization.

2013-05-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient addition.

2013-05-25 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCopt.c: fixed bug #2165 - "Broken comparison" by disableing
	  optimization of comparision unsigned with 2^n literal since it is broken
	* support/regression/test/compare_2_n.c: added test for bug #2165

2013-05-25 Philipp Klaus Krause <pkk AT spth.de>

	* Merged stm8 branch.

2013-05-25 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/float_single.c,
	  support/regression/tests/gcc-torture-execute-20030714-1.c,
	  support/regression/tests/gcc-torture-execute-20050826-1.c:
	  STM8: Disable failing tests.

2013-05-25 Borut Razem <borut.razem AT gmail.com>

	* Makefile.in: applied patch #211 - "sdbinutils is installed twice",
	  thanks to Tijl Coosemans

2013-05-24 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-20010224-1.c:
	  STM8: Disable test that fails due to known CSE bug #1968.
	* support/regression/ports/stm8/spec.mk:
	  STM8: Remove definition for __reentrant.
	* src/stm8/gen.c:
	  STM8: Fix handling of out-of-range offsets.

2013-05-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix float negation, fix large stack-to-stack copy under high register pressure, fix handling of immediate operands.