@@ -2056,7 +2056,7 @@ offsetFold (eBBlock **ebbs, int count)
               if (bitVectnBitsOn (OP_USES (IC_RESULT (ic))) != 1)
                 continue;
 
-              /* This use must be a GET_VALUE_AT_DDRESS */
+              /* This use must be a GET_VALUE_AT_ADDRESS */
               uic = hTabItemWithKey (iCodehTab,
                         bitVectFirstBit (OP_USES (IC_RESULT (ic))));
               if (!POINTER_GET (uic))
