@@ -1,11 +1,13 @@
 2013-05-27 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c:
-	  More efficient pointer access.
+	  More efficient pointer access, more efficient loading of constants to stack, fix handling of shift count deadness.
 	* sim/ucsim/stm8.src/inst.cc:
 	  Fix ldw pointer write (bug #2174).
 	* support/regression/tests/gcc-torture-execute-pr47538.c:
 	  Disable volatile test affected by bug #2171.
+	* src/stm8/ralloc2.cc:
+	  Implement heuristic bias for register assignment.
 
 2013-05-26 Philipp Klaus Krause <pkk AT spth.de>
 
